--- a/LAB1/LAB1.ipynb
+++ b/LAB1/LAB1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,16 +30,21 @@
     "\n",
     "    factors = []\n",
     "\n",
-    "    if n % 2 == 0: # if n is even\n",
-    "        factors.append(2)\n",
+    "    if n < 0:\n",
+    "        print(\"n must be a positive integer\")\n",
+    "        return\n",
     "\n",
+    "    while n % 2 == 0: # if n is even\n",
+    "        factors.append(2)\n",
+    "        n = n / 2\n",
     "\n",
     "    for i in range(3, int(math.sqrt(n)) + 1, 2):\n",
-    "        if n % i == 0:\n",
+    "        while n % i == 0:\n",
     "            factors.append(i)\n",
-    "            n /= i\n",
-    "            if n == 1:\n",
-    "                break\n",
+    "            n = n / i\n",
+    "\n",
+    "    if n >= 2:\n",
+    "        factors.append(n)\n",
     "\n",
     "    return factors\n",
     "\n",
@@ -175,16 +180,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GCD of 112 and 121 is 1, time taken: 1.3113021850585938e-05 seconds\n",
-      "GCD of 112 and 121 is 1, time taken: 2.8848648071289062e-05 seconds\n",
-      "GCD of 112 and 121 is 1, time taken: 1.9073486328125e-06 seconds\n"
+      "GCD of 2 and 7 is 1, time taken: 1.1205673217773438e-05 seconds\n",
+      "GCD of 2 and 7 is 1, time taken: 1.4066696166992188e-05 seconds\n",
+      "GCD of 2 and 7 is 1, time taken: 2.1457672119140625e-06 seconds\n"
      ]
     }
    ],
@@ -354,6 +359,35 @@
     "\n",
     "execute_pf_navie(numbers)\n",
     "execute_pf_sieve(numbers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 2, 2, 3, 5]\n",
+      "[2, 2, 2, 2]\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(naive_prime_factorization(120))\n",
+    "print(naive_prime_factorization(16))\n",
+    "\n",
+    "print(FindGCD1(120, 16))"
    ]
   }
  ],
