--- a/LAB1/LAB1.ipynb
+++ b/LAB1/LAB1.ipynb
@@ -22,18 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "def naive_prime_factorization(n):\n",
     "\n",
     "    factors = []\n",
-    "\n",
-    "    if n < 0:\n",
-    "        print(\"n must be a positive integer\")\n",
-    "        return\n",
-    "\n",
+    "    \n",
     "    while n % 2 == 0: # if n is even\n",
     "        factors.append(2)\n",
     "        n = n / 2\n",
@@ -54,6 +50,9 @@
     "    factors_m = naive_prime_factorization(m)\n",
     "    factors_n = naive_prime_factorization(n)\n",
     "\n",
+    "    # print(f\"Prime factors of {m}: {factors_m}\")\n",
+    "    # print(f\"Prime factors of {n}: {factors_n}\")\n",
+    "\n",
     "    # Step 3: Find all the common prime factors\n",
     "    common_factors = []\n",
     "    for i in factors_m:\n",
@@ -61,11 +60,11 @@
     "            common_factors.append(i)\n",
     "\n",
     "    # Step 4: Step 4 Compute the product of all the common prime factors and return it as gcd(m,n)\n",
-    "    product = 1\n",
+    "    gcd = 1\n",
     "    for i in common_factors:\n",
-    "        product *= i\n",
+    "        gcd *= i\n",
     "\n",
-    "    return product"
+    "    return gcd"
    ]
   },
   {
@@ -77,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,6 +117,8 @@
     "            factors.append(i)\n",
     "            n //= i\n",
     "\n",
+    "    print(f\"{factors}\")\n",
+    "\n",
     "    return factors\n",
     "\n",
     "def FindGCD2(m, n):\n",
@@ -149,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Recursive GCD"
+    "# Euclidean"
    ]
   },
   {
@@ -199,7 +200,7 @@
     "m = abs(m)\n",
     "n = abs(n)\n",
     "\n",
-    "if m == 0 or n == 0:\n",
+    "if m == 0 and n == 0:\n",
     "    print(\"GCD of 0 and 0 is not defined\")\n",
     "else:\n",
     "    start_time = time.time()\n",
@@ -370,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -379,15 +380,15 @@
      "text": [
       "[2, 2, 2, 3, 5]\n",
       "[2, 2, 2, 2]\n",
-      "8\n"
+      "8\n",
+      "2\n"
      ]
     }
    ],
    "source": [
-    "print(naive_prime_factorization(120))\n",
-    "print(naive_prime_factorization(16))\n",
+    "print(FindGCD2(120, 16))\n",
     "\n",
-    "print(FindGCD1(120, 16))"
+    "print(120 % 59)"
    ]
   }
  ],
