🐛  Fix bug duplicate intersection

--- a/LAB1/LAB1.ipynb
+++ b/LAB1/LAB1.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import math"
+    "import math\n",
+    "from collections import Counter"
    ]
   },
   {
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,10 +57,7 @@
     "    # print(f\"Prime factors of {n}: {factors_n}\")\n",
     "\n",
     "    # Step 3: Find all the common prime factors\n",
-    "    common_factors = []\n",
-    "    for i in factors_m:\n",
-    "        if i in factors_n:\n",
-    "            common_factors.append(i)\n",
+    "    common_factors = list((Counter(factors_m) & Counter(factors_n)).elements())\n",
     "\n",
     "    # Step 4: Step 4 Compute the product of all the common prime factors and return it as gcd(m,n)\n",
     "    gcd = 1\n",
@@ -78,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,14 +127,12 @@
     "    factors_m = sieve_of_eratosthenes_prime_factorization(m)\n",
     "    factors_n = sieve_of_eratosthenes_prime_factorization(n)\n",
     "\n",
-    "    # print(f\"Prime factors of {m} are {factors_m}\")\n",
-    "    # print(f\"Prime factors of {n} are {factors_n}\")\n",
-    "\n",
     "    # Step 3: Find all the common prime factors\n",
-    "    common_factors = []\n",
-    "    for i in factors_m:\n",
-    "        if i in factors_n:\n",
-    "            common_factors.append(i)\n",
+    "    common_factors = common_factors = list((Counter(factors_m) & Counter(factors_n)).elements())\n",
+    "\n",
+    "    print(f\"Prime factors of {m} are {factors_m}\")\n",
+    "    print(f\"Prime factors of {n} are {factors_n}\")\n",
+    "    print(f\"Common prime factors are {common_factors}\")\n",
     "\n",
     "    # Step 4 Compute the product of all the common prime factors and return it as gcd(m,n)\n",
     "    gcd = 1\n",
@@ -183,21 +179,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GCD of 98 and 98764 is 2, time taken: 3.695487976074219e-05 seconds\n",
-      "GCD of 98 and 98764 is 2, time taken: 0.012950897216796875 seconds\n",
-      "GCD of 98 and 98764 is 2, time taken: 3.0994415283203125e-06 seconds\n"
+      "GCD of 8 and 12 is 4, time taken: 4.315376281738281e-05 seconds\n",
+      "Prime factors of 8 are [2, 2, 2]\n",
+      "Prime factors of 12 are [2, 2, 3]\n",
+      "Common prime factors are [2, 2]\n",
+      "GCD of 8 and 12 is 4, time taken: 6.198883056640625e-05 seconds\n",
+      "GCD of 8 and 12 is 4, time taken: 1.9073486328125e-06 seconds\n"
      ]
     }
    ],
    "source": [
-    "m, n = map(int, input().split(\", \"))\n",
+    "# m, n = map(int, input().split(\", \"))\n",
+    "\n",
+    "m = 8\n",
+    "n = 12\n",
     "\n",
     "m = abs(m)\n",
     "n = abs(n)\n",
