--- a/LAB2/LAB2.ipynb
+++ b/LAB2/LAB2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,11 +146,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iterative\n",
+      "\n",
+      "Recursive\n",
+      "\n",
+      "Hamiltonian\n"
+     ]
+    }
+   ],
    "source": [
-    "input_file = \"test/Example_LAB2.txt\"\n",
+    "input_file = \"test/Extra/2.2.6.txt\"\n",
     "\n",
     "graph = read_adjacency_matrix_file(input_file)\n",
     "\n",
@@ -169,51 +181,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File: 2.2.7.txt\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'test/2.2.7.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[39mfor\u001b[39;00m file \u001b[39min\u001b[39;00m files:\n\u001b[1;32m      8\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mFile: \u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 10\u001b[0m     graph \u001b[39m=\u001b[39m read_adjacency_matrix_file(\u001b[39mf\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mtest/\u001b[39;49m\u001b[39m{\u001b[39;49;00mfile\u001b[39m}\u001b[39;49;00m\u001b[39m\"\u001b[39;49m)\n\u001b[1;32m     12\u001b[0m     source \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m     13\u001b[0m     destination \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(graph) \u001b[39m-\u001b[39m \u001b[39m1\u001b[39m\n",
-      "Cell \u001b[0;32mIn[4], line 2\u001b[0m, in \u001b[0;36mread_adjacency_matrix_file\u001b[0;34m(file)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mread_adjacency_matrix_file\u001b[39m(file: \u001b[39mstr\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mlist\u001b[39m[\u001b[39mlist\u001b[39m[\u001b[39mint\u001b[39m]]:\n\u001b[0;32m----> 2\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(file, \u001b[39m'\u001b[39;49m\u001b[39mr\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m      3\u001b[0m         lines \u001b[39m=\u001b[39m f\u001b[39m.\u001b[39mreadlines()\n\u001b[1;32m      4\u001b[0m         graph \u001b[39m=\u001b[39m []\n",
-      "File \u001b[0;32m~/anaconda3/envs/py311/lib/python3.11/site-packages/IPython/core/interactiveshell.py:284\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    277\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[1;32m    278\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    279\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    280\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    281\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    282\u001b[0m     )\n\u001b[0;32m--> 284\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'test/2.2.7.txt'"
+      "Add 1 edges\n",
+      "Add 1 edges\n",
+      "Add edge 1 - 0\n",
+      "Add edge 1 - 1\n",
+      "Add edge 1 - 2\n",
+      "Add edge 1 - 4\n",
+      "Add edge 1 - 5\n",
+      "Add edge 1 - 6\n",
+      "Add edge 1 - 7\n",
+      "Hamiltonian path: [2, 0, 3, 1, 4, 6, 5, 7]\n",
+      "Hamiltonian path: [2, 0, 3, 1, 7, 5, 6, 4]\n",
+      "Add 1 edges\n",
+      "Add edge 2 - 1\n",
+      "Add edge 2 - 2\n",
+      "Add edge 2 - 3\n",
+      "Add edge 2 - 4\n",
+      "Add edge 2 - 5\n",
+      "Add edge 2 - 6\n",
+      "Add edge 2 - 7\n",
+      "Hamiltonian path: [0, 2, 3, 1, 4, 6, 5, 7]\n",
+      "Hamiltonian path: [0, 2, 3, 1, 7, 5, 6, 4]\n",
+      "Hamiltonian path: [0, 3, 1, 2, 4, 6, 5, 7]\n",
+      "Hamiltonian path: [0, 3, 1, 2, 7, 5, 6, 4]\n",
+      "Hamiltonian path: [1, 3, 0, 2, 4, 6, 5, 7]\n",
+      "Hamiltonian path: [1, 3, 0, 2, 7, 5, 6, 4]\n",
+      "Hamiltonian path: [2, 0, 3, 1, 4, 6, 5, 7]\n",
+      "Hamiltonian path: [2, 0, 3, 1, 7, 5, 6, 4]\n",
+      "Hamiltonian path: [3, 0, 2, 1, 4, 6, 5, 7]\n",
+      "Hamiltonian path: [3, 0, 2, 1, 7, 5, 6, 4]\n",
+      "Add 1 edges\n",
+      "Add edge 3 - 2\n",
+      "Add edge 3 - 3\n",
+      "Add edge 3 - 4\n",
+      "Add edge 3 - 5\n",
+      "Add edge 3 - 6\n",
+      "Add edge 3 - 7\n",
+      "Hamiltonian path: [1, 2, 0, 3, 4, 6, 5, 7]\n",
+      "Hamiltonian path: [1, 2, 0, 3, 7, 5, 6, 4]\n",
+      "Hamiltonian path: [2, 0, 3, 1, 4, 6, 5, 7]\n",
+      "Hamiltonian path: [2, 0, 3, 1, 7, 5, 6, 4]\n",
+      "Add 1 edges\n",
+      "Add edge 4 - 0\n",
+      "Add edge 4 - 1\n",
+      "Add edge 4 - 2\n",
+      "Add edge 4 - 3\n",
+      "Add edge 4 - 4\n",
+      "Add edge 4 - 5\n",
+      "Add edge 4 - 7\n",
+      "Hamiltonian path: [0, 3, 1, 7, 5, 6, 4, 2] (cycle)\n",
+      "Hamiltonian path: [1, 7, 5, 6, 4, 2, 0, 3] (cycle)\n",
+      "Hamiltonian path: [1, 7, 5, 6, 4, 3, 0, 2]\n",
+      "Hamiltonian path: [2, 0, 3, 1, 4, 6, 5, 7]\n",
+      "Hamiltonian path: [2, 0, 3, 1, 4, 7, 5, 6]\n",
+      "Hamiltonian path: [2, 0, 3, 1, 5, 6, 4, 7]\n",
+      "Hamiltonian path: [2, 0, 3, 1, 7, 5, 6, 4] (cycle)\n",
+      "Hamiltonian path: [3, 1, 7, 5, 6, 4, 0, 2]\n",
+      "Hamiltonian path: [3, 1, 7, 5, 6, 4, 2, 0] (cycle)\n",
+      "Hamiltonian path: [4, 2, 0, 3, 1, 7, 5, 6] (cycle)\n",
+      "Hamiltonian path: [5, 6, 4, 2, 0, 3, 1, 7] (cycle)\n",
+      "Hamiltonian path: [6, 4, 2, 0, 3, 1, 5, 7]\n",
+      "Hamiltonian path: [6, 4, 2, 0, 3, 1, 7, 5] (cycle)\n",
+      "Hamiltonian path: [7, 5, 6, 4, 0, 3, 1, 2]\n",
+      "Hamiltonian path: [7, 5, 6, 4, 1, 2, 0, 3]\n",
+      "Hamiltonian path: [7, 5, 6, 4, 1, 3, 0, 2]\n",
+      "Hamiltonian path: [7, 5, 6, 4, 2, 0, 3, 1] (cycle)\n",
+      "Hamiltonian path: [7, 5, 6, 4, 3, 1, 0, 2]\n",
+      "Hamiltonian path: [7, 5, 6, 4, 3, 1, 2, 0]\n",
+      "Add 1 edges\n",
+      "Add edge 5 - 0\n",
+      "Add edge 5 - 1\n",
+      "Add edge 5 - 2\n",
+      "Add edge 5 - 3\n",
+      "Add edge 5 - 4\n",
+      "Add edge 5 - 5\n",
+      "Hamiltonian path: [2, 0, 3, 1, 4, 6, 5, 7]\n",
+      "Hamiltonian path: [7, 5, 2, 0, 3, 1, 4, 6]\n",
+      "Add 1 edges\n",
+      "Add edge 6 - 0\n",
+      "Add edge 6 - 1\n",
+      "Add edge 6 - 2\n",
+      "Add edge 6 - 3\n",
+      "Add edge 6 - 6\n",
+      "Add edge 6 - 7\n",
+      "Hamiltonian path: [2, 0, 3, 1, 7, 5, 6, 4]\n",
+      "Hamiltonian path: [4, 6, 2, 0, 3, 1, 7, 5]\n",
+      "Add 1 edges\n",
+      "Add edge 7 - 0\n",
+      "Add edge 7 - 1\n",
+      "Add edge 7 - 2\n",
+      "Add edge 7 - 3\n",
+      "Add edge 7 - 4\n",
+      "Add edge 7 - 6\n",
+      "Add edge 7 - 7\n",
+      "Hamiltonian path: [0, 3, 1, 4, 6, 5, 7, 2] (cycle)\n",
+      "Hamiltonian path: [1, 4, 6, 5, 7, 2, 0, 3] (cycle)\n",
+      "Hamiltonian path: [1, 4, 6, 5, 7, 3, 0, 2]\n",
+      "Hamiltonian path: [2, 0, 3, 1, 4, 6, 5, 7] (cycle)\n",
+      "Hamiltonian path: [2, 0, 3, 1, 6, 5, 7, 4]\n",
+      "Hamiltonian path: [2, 0, 3, 1, 7, 4, 6, 5]\n",
+      "Hamiltonian path: [2, 0, 3, 1, 7, 5, 6, 4]\n",
+      "Hamiltonian path: [3, 1, 4, 6, 5, 7, 0, 2]\n",
+      "Hamiltonian path: [3, 1, 4, 6, 5, 7, 2, 0] (cycle)\n",
+      "Hamiltonian path: [4, 6, 5, 7, 0, 3, 1, 2]\n",
+      "Hamiltonian path: [4, 6, 5, 7, 1, 2, 0, 3]\n",
+      "Hamiltonian path: [4, 6, 5, 7, 1, 3, 0, 2]\n",
+      "Hamiltonian path: [4, 6, 5, 7, 2, 0, 3, 1] (cycle)\n",
+      "Hamiltonian path: [4, 6, 5, 7, 3, 1, 0, 2]\n",
+      "Hamiltonian path: [4, 6, 5, 7, 3, 1, 2, 0]\n",
+      "Hamiltonian path: [5, 7, 2, 0, 3, 1, 4, 6] (cycle)\n",
+      "Hamiltonian path: [5, 7, 2, 0, 3, 1, 6, 4]\n",
+      "Hamiltonian path: [6, 5, 7, 2, 0, 3, 1, 4] (cycle)\n",
+      "Hamiltonian path: [7, 2, 0, 3, 1, 4, 6, 5] (cycle)\n"
      ]
     }
    ],
    "source": [
-    "# Get files from folder\n",
+    "for i in range(len(graph)):\n",
+    "    for j in range(1, 2):\n",
     "\n",
-    "import os\n",
+    "        added = 0\n",
+    "        new_graph = [list(x) for x in graph]\n",
+    "        \n",
+    "        print(f\"Add {j} edges\")\n",
     "\n",
-    "files = os.listdir(\"test/Extra\")\n",
+    "        for k in range(len(new_graph)):\n",
+    "            if new_graph[i][k] == 0 and added < i:\n",
+    "                new_graph[i][k] = 1\n",
+    "                new_graph[j][k] = 1\n",
     "\n",
-    "for file in files:\n",
-    "    print(f\"File: {file}\")\n",
+    "                print(f\"Add edge {i} - {k}\")\n",
+    "        \n",
+    "            \n",
     "\n",
-    "    graph = read_adjacency_matrix_file(f\"test/Extra/{file}\")\n",
-    "\n",
-    "    source = 0\n",
-    "    destination = len(graph) - 1\n",
-    "\n",
-    "    print(\"Find path\")\n",
-    "    find_path_recursive(graph, source, destination)\n",
-    "\n",
-    "    print(\"\\nFind hamiltonian path\")\n",
-    "    find_hamiltonian_path(graph)\n",
-    "    "
+    "        find_hamiltonian_path(new_graph)"
    ]
   }
  ],
@@ -233,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
