--- a/LAB3/LAB3.ipynb
+++ b/LAB3/LAB3.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import itertools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "road = \"GGPPPPGGGGPPGPP\" #  G = Taxi, P = Passenger\n",
+    "fuel = 2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9,26 +29,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "road = \"GGPPPPGGGGPPGPP\" #  G = Taxi, P = Passenger\n",
-    "fuel = 3 # Maximum distance the car can travel"
+    "def canReachPassenger(solution, k):\n",
+    "    \n",
+    "    for pair in solution:\n",
+    "        grab_pos, passenger_pos = pair\n",
+    "        if abs(grab_pos - passenger_pos) > k:\n",
+    "            return False\n",
+    "        \n",
+    "    return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def max_passenger_brute_force(road, fuel):\n",
+    "\n",
+    "    road = list(road)\n",
+    "\n",
+    "    grab_index = [i for i in range(len(road)) if road[i] == 'G']\n",
+    "    passenger_index = [i for i in range(len(road)) if road[i] == 'P']\n",
+    "\n",
+    "    n_of_selectable = min(len(grab_index), len(passenger_index))\n",
+    "\n",
+    "    # Generate all possible combinations of grab and passenger index\n",
+    "    grab_permutations = list(itertools.permutations(grab_index, n_of_selectable))\n",
+    "    passenger_permutations = list(itertools.permutations(passenger_index, n_of_selectable))\n",
+    "\n",
+    "    # Get Passenger for each grab\n",
+    "    possible_solutions = []\n",
+    "    for grab in grab_permutations:\n",
+    "        for passenger in passenger_permutations:\n",
+    "            solution = list(zip(grab, passenger))\n",
+    "\n",
+    "            if canReachPassenger(solution, fuel):\n",
+    "                possible_solutions.append(solution)\n",
+    "\n",
+    "    # Get max passenger\n",
+    "    max_passenger = 0\n",
+    "\n",
+    "    for solution in possible_solutions:\n",
+    "        passenger_count = len(solution)\n",
+    "        if passenger_count > max_passenger:\n",
+    "            max_passenger = passenger_count\n",
+    "\n",
+    "       \n",
+    "\n",
+    "    return max_passenger\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Greedy Algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def max_passenger_greedy_1(road, fuel):\n",
     "    # Preprocess the road\n",
     "    grab_index = [i for i in range(len(road)) if road[i] == 'G']\n",
     "    passenger_index = [i for i in range(len(road)) if road[i] == 'P']\n",
     "\n",
-    "    # Brute force\n",
     "    passenger_count = 0\n",
     "\n",
     "    i, j = 0, 0\n",
@@ -36,7 +110,6 @@
     "    while i < len(grab_index) and j < len(passenger_index):\n",
     "        if abs(grab_index[i] - passenger_index[j]) <= fuel:\n",
     "            passenger_count += 1\n",
-    "            print(f\"Taxi at {i} picks up passenger at {j}\")\n",
     "            i += 1\n",
     "            j += 1\n",
     "        elif grab_index[i] < passenger_index[j]:\n",
@@ -49,35 +122,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(max_passenger_brute_force(road, fuel))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Greedy Algorithm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def max_passenger_greedy(road, k):\n",
+    "def max_passenger_greedy_2(road, k):\n",
     "\n",
     "    road = list(road)\n",
     "    passenger = 0\n",
@@ -87,9 +136,8 @@
     "            lower_bound = max(0, i - k)\n",
     "            upper_bound = min(len(road) - 1, i + k)\n",
     "\n",
-    "            for j in range(lower_bound, upper_bound):\n",
+    "            for j in range(lower_bound, upper_bound + 1):\n",
     "                if road[j] == 'P':\n",
-    "                    print(f\"Taxi at {i} picks up passenger at {j}\")\n",
     "                    passenger += 1\n",
     "                    road[j] = 'X'\n",
     "                    break\n",
@@ -98,136 +146,149 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Moment of truth"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m road \u001b[39m=\u001b[39m f\u001b[39m.\u001b[39mreadline()\u001b[39m.\u001b[39mstrip()\n\u001b[1;32m      5\u001b[0m fuel \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(f\u001b[39m.\u001b[39mreadline()\u001b[39m.\u001b[39mstrip())\n\u001b[0;32m----> 7\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mBrute Force 1: \u001b[39m\u001b[39m{\u001b[39;00mmax_passenger_brute_force(road,\u001b[39m \u001b[39mfuel)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      8\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mGreedy 1: \u001b[39m\u001b[39m{\u001b[39;00mmax_passenger_greedy_1(road,\u001b[39m \u001b[39mfuel)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      9\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mGreedy 2: \u001b[39m\u001b[39m{\u001b[39;00mmax_passenger_greedy_2(road,\u001b[39m \u001b[39mfuel)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[5], line 18\u001b[0m, in \u001b[0;36mmax_passenger_brute_force\u001b[0;34m(road, fuel)\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[39mfor\u001b[39;00m grab \u001b[39min\u001b[39;00m grab_permutations:\n\u001b[1;32m     17\u001b[0m     \u001b[39mfor\u001b[39;00m passenger \u001b[39min\u001b[39;00m passenger_permutations:\n\u001b[0;32m---> 18\u001b[0m         solution \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39mzip\u001b[39m(grab, passenger))\n\u001b[1;32m     20\u001b[0m         \u001b[39mif\u001b[39;00m canReachPassenger(solution, fuel):\n\u001b[1;32m     21\u001b[0m             possible_solutions\u001b[39m.\u001b[39mappend(solution)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "print(max_passenger_greedy(road, fuel))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "Taxi at 0 picks up passenger at 1\n",
-      "Taxi at 3 picks up passenger at 2\n",
-      "2\n"
-     ]
-    }
-   ],
-   "source": [
-    "file_path = \"./test/Extra/3.5.2.txt\"    \n",
+    "file_path = \"./test/normal/3.2.2.txt\"    \n",
     "\n",
     "with open(file_path, \"r\") as f:\n",
     "    road = f.readline().strip()\n",
     "    fuel = int(f.readline().strip())\n",
     "\n",
-    "    print(max_passenger_brute_force(road, fuel))\n",
-    "    print(max_passenger_greedy(road, fuel))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.4.4.txt\n",
-      "978\n",
-      "978\n",
-      "3.4.5.txt\n",
-      "30\n",
-      "30\n",
-      "3.4.2.txt\n",
-      "150\n",
-      "150\n",
-      "3.4.3.txt\n",
-      "260\n",
-      "260\n",
-      "3.4.1.txt\n",
-      "8\n",
-      "8\n",
-      "3.5.1.txt\n",
-      "3\n",
-      "2\n",
-      "3.5.2.txt\n",
-      "3\n",
-      "2\n",
-      "3.5.3.txt\n",
-      "3\n",
-      "3\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "path = \"./test/Extra\"\n",
-    "\n",
-    "for filename in os.listdir(path):\n",
-    "    print(filename)\n",
-    "\n",
-    "    with open(path + \"/\" + filename, \"r\") as f:\n",
-    "        road = f.readline().strip()\n",
-    "        fuel = int(f.readline().strip())\n",
-    "\n",
-    "        print(max_passenger_brute_force(road, fuel))\n",
-    "        print(max_passenger_greedy(road, fuel))"
+    "    print(f\"Brute Force 1: {max_passenger_brute_force(road, fuel)}\")\n",
+    "    print(f\"Greedy 1: {max_passenger_greedy_1(road, fuel)}\")\n",
+    "    print(f\"Greedy 2: {max_passenger_greedy_2(road, fuel)}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Jam"
+    "## Test Greedy Algorithm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File: ./test/Extra/3.4.4.txt:\n",
+      "Greedy 1: 978\n",
+      "Greedy 2: 978\n",
+      "\n",
+      "File: ./test/Extra/3.4.5.txt:\n",
+      "Greedy 1: 30\n",
+      "Greedy 2: 30\n",
+      "\n",
+      "File: ./test/Extra/3.4.2.txt:\n",
+      "Greedy 1: 150\n",
+      "Greedy 2: 150\n",
+      "\n",
+      "File: ./test/Extra/3.4.3.txt:\n",
+      "Greedy 1: 260\n",
+      "Greedy 2: 260\n",
+      "\n",
+      "File: ./test/Extra/3.4.1.txt:\n",
+      "Greedy 1: 8\n",
+      "Greedy 2: 8\n",
+      "\n",
+      "File: ./test/Extra/3.5.1.txt:\n",
+      "Greedy 1: 3\n",
+      "Greedy 2: 3\n",
+      "\n",
+      "File: ./test/Extra/3.5.2.txt:\n",
+      "Greedy 1: 3\n",
+      "Greedy 2: 3\n",
+      "\n",
+      "File: ./test/Extra/3.5.3.txt:\n",
+      "Greedy 1: 3\n",
+      "Greedy 2: 3\n",
+      "\n",
+      "File: ./test/normal/3.2.2.txt:\n",
+      "Greedy 1: 7\n",
+      "Greedy 2: 7\n",
+      "\n",
+      "File: ./test/normal/3.2.3.txt:\n",
+      "Greedy 1: 10\n",
+      "Greedy 2: 10\n",
+      "\n",
+      "File: ./test/normal/3.2.1.txt:\n",
+      "Greedy 1: 10\n",
+      "Greedy 2: 10\n",
+      "\n",
+      "File: ./test/normal/3.3.1.txt:\n",
+      "Greedy 1: 7\n",
+      "Greedy 2: 7\n",
+      "\n",
+      "File: ./test/normal/3.1.3.txt:\n",
+      "Greedy 1: 5\n",
+      "Greedy 2: 5\n",
+      "\n",
+      "File: ./test/normal/3.1.2.txt:\n",
+      "Greedy 1: 5\n",
+      "Greedy 2: 5\n",
+      "\n",
+      "File: ./test/normal/3.3.2.txt:\n",
+      "Greedy 1: 10\n",
+      "Greedy 2: 10\n",
+      "\n",
+      "File: ./test/normal/3.1.1.txt:\n",
+      "Greedy 1: 10\n",
+      "Greedy 2: 10\n",
+      "\n",
+      "File: ./test/normal/3.3.3.txt:\n",
+      "Greedy 1: 5\n",
+      "Greedy 2: 5\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "def max_passenger_jam(array, k):\n",
-    "    count = 0\n",
+    "path = \"./test\"\n",
     "\n",
-    "    # buit check array contain True\n",
-    "    check = []\n",
-    "    for i in range(len(array)):\n",
-    "        check.append(True)\n",
+    "dirs = os.listdir(path)\n",
     "\n",
+    "for dir in dirs:\n",
+    "    path = f\"./test/{dir}\"\n",
     "\n",
-    "    for index in range (len(array)):\n",
-    "        if array[index] == \"G\" :\n",
-    "            #print(index)\n",
-    "        \n",
-    "            for space in range(-k,k+1): \n",
-    "                check_index = index + space\n",
+    "    for filename in os.listdir(path):\n",
+    "        print(f\"File: {path}/{filename}:\")\n",
     "\n",
-    "                if 0 <= check_index <= len(array)-1:\n",
-    "                    if array[check_index] == \"P\" and check[check_index] != False and check[index] != False :\n",
-    "                        check[check_index] = False\n",
-    "                        check[index] = False\n",
-    "                        count = count+1\n",
-    "    \n",
-    "    return count"
+    "        with open(path + \"/\" + filename, \"r\") as f:\n",
+    "            road = f.readline().strip()\n",
+    "            fuel = int(f.readline().strip())\n",
+    "\n",
+    "            # print(f\"Brute Force 1: {max_passenger_brute_force(road, fuel)}\")\n",
+    "            print(f\"Greedy 1: {max_passenger_greedy_1(road, fuel)}\")\n",
+    "            print(f\"Greedy 2: {max_passenger_greedy_2(road, fuel)}\")\n",
+    "\n",
+    "        print()"
    ]
   }
  ],
