--- a/LAB3/LAB3.ipynb
+++ b/LAB3/LAB3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,24 +154,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m road \u001b[39m=\u001b[39m f\u001b[39m.\u001b[39mreadline()\u001b[39m.\u001b[39mstrip()\n\u001b[1;32m      5\u001b[0m fuel \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(f\u001b[39m.\u001b[39mreadline()\u001b[39m.\u001b[39mstrip())\n\u001b[0;32m----> 7\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mBrute Force 1: \u001b[39m\u001b[39m{\u001b[39;00mmax_passenger_brute_force(road,\u001b[39m \u001b[39mfuel)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      8\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mGreedy 1: \u001b[39m\u001b[39m{\u001b[39;00mmax_passenger_greedy_1(road,\u001b[39m \u001b[39mfuel)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      9\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mGreedy 2: \u001b[39m\u001b[39m{\u001b[39;00mmax_passenger_greedy_2(road,\u001b[39m \u001b[39mfuel)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[5], line 18\u001b[0m, in \u001b[0;36mmax_passenger_brute_force\u001b[0;34m(road, fuel)\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[39mfor\u001b[39;00m grab \u001b[39min\u001b[39;00m grab_permutations:\n\u001b[1;32m     17\u001b[0m     \u001b[39mfor\u001b[39;00m passenger \u001b[39min\u001b[39;00m passenger_permutations:\n\u001b[0;32m---> 18\u001b[0m         solution \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39mzip\u001b[39m(grab, passenger))\n\u001b[1;32m     20\u001b[0m         \u001b[39mif\u001b[39;00m canReachPassenger(solution, fuel):\n\u001b[1;32m     21\u001b[0m             possible_solutions\u001b[39m.\u001b[39mappend(solution)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Brute Force 1: 5\n",
+      "Greedy 1: 5\n",
+      "Greedy 2: 5\n"
      ]
     }
    ],
    "source": [
-    "file_path = \"./test/normal/3.2.2.txt\"    \n",
+    "file_path = \"./test/normal/3.1.2.txt\"    \n",
     "\n",
     "with open(file_path, \"r\") as f:\n",
     "    road = f.readline().strip()\n",
@@ -191,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
