--- a/LAB3/LAB3.ipynb
+++ b/LAB3/LAB3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,6 +75,7 @@
     "    max_passenger = 0\n",
     "\n",
     "    for solution in possible_solutions:\n",
+    "        print(solution)\n",
     "        passenger_count = len(solution)\n",
     "        if passenger_count > max_passenger:\n",
     "            max_passenger = passenger_count\n",
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,6 +147,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def max_passenger_greedy_3(road, k):\n",
+    "\n",
+    "    road = list(road)\n",
+    "    passenger = 0\n",
+    "\n",
+    "    for i in range(len(road)):\n",
+    "        if road[i] == 'G':\n",
+    "            lower_bound = max(0, i - k)\n",
+    "            upper_bound = min(len(road) - 1, i + k)\n",
+    "\n",
+    "            for j in range(i, lower_bound - 1, -1):\n",
+    "                if road[j] == 'P':\n",
+    "                    passenger += 1\n",
+    "                    road[j] = 'X'\n",
+    "                    break\n",
+    "            \n",
+    "            for j in range(i, upper_bound + 1):\n",
+    "                if road[j] == 'P':\n",
+    "                    passenger += 1\n",
+    "                    road[j] = 'X'\n",
+    "                    break\n",
+    "\n",
+    "    return passenger"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -154,21 +186,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Brute Force 1: 5\n",
-      "Greedy 1: 5\n",
-      "Greedy 2: 5\n"
+      "[(0, 1), (2, 3), (4, 5)]\n",
+      "[(0, 1), (2, 5), (4, 3)]\n",
+      "[(0, 3), (2, 1), (4, 5)]\n",
+      "[(0, 3), (2, 5), (4, 1)]\n",
+      "[(0, 1), (4, 3), (2, 5)]\n",
+      "[(0, 1), (4, 5), (2, 3)]\n",
+      "[(0, 3), (4, 1), (2, 5)]\n",
+      "[(0, 3), (4, 5), (2, 1)]\n",
+      "[(2, 1), (0, 3), (4, 5)]\n",
+      "[(2, 3), (0, 1), (4, 5)]\n",
+      "[(2, 5), (0, 1), (4, 3)]\n",
+      "[(2, 5), (0, 3), (4, 1)]\n",
+      "[(2, 1), (4, 5), (0, 3)]\n",
+      "[(2, 3), (4, 5), (0, 1)]\n",
+      "[(2, 5), (4, 1), (0, 3)]\n",
+      "[(2, 5), (4, 3), (0, 1)]\n",
+      "[(4, 1), (0, 3), (2, 5)]\n",
+      "[(4, 3), (0, 1), (2, 5)]\n",
+      "[(4, 5), (0, 1), (2, 3)]\n",
+      "[(4, 5), (0, 3), (2, 1)]\n",
+      "[(4, 1), (2, 5), (0, 3)]\n",
+      "[(4, 3), (2, 5), (0, 1)]\n",
+      "[(4, 5), (2, 1), (0, 3)]\n",
+      "[(4, 5), (2, 3), (0, 1)]\n",
+      "Brute Force 1: 3\n",
+      "Greedy 1: 3\n",
+      "Greedy 2: 3\n"
      ]
     }
    ],
    "source": [
-    "file_path = \"./test/normal/3.1.2.txt\"    \n",
+    "file_path = \"./test/Extra/3.5.1.txt\"    \n",
     "\n",
     "with open(file_path, \"r\") as f:\n",
     "    road = f.readline().strip()\n",
@@ -188,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -197,71 +253,88 @@
      "text": [
       "File: ./test/Extra/3.4.4.txt:\n",
       "Greedy 1: 978\n",
-      "Greedy 2: 978\n",
+      "Greedy 2: 980\n",
+      "Greedy 3: 980\n",
       "\n",
       "File: ./test/Extra/3.4.5.txt:\n",
       "Greedy 1: 30\n",
-      "Greedy 2: 30\n",
+      "Greedy 2: 36\n",
+      "Greedy 3: 36\n",
       "\n",
       "File: ./test/Extra/3.4.2.txt:\n",
       "Greedy 1: 150\n",
-      "Greedy 2: 150\n",
+      "Greedy 2: 299\n",
+      "Greedy 3: 299\n",
       "\n",
       "File: ./test/Extra/3.4.3.txt:\n",
       "Greedy 1: 260\n",
-      "Greedy 2: 260\n",
+      "Greedy 2: 518\n",
+      "Greedy 3: 518\n",
       "\n",
       "File: ./test/Extra/3.4.1.txt:\n",
       "Greedy 1: 8\n",
-      "Greedy 2: 8\n",
+      "Greedy 2: 9\n",
+      "Greedy 3: 9\n",
       "\n",
       "File: ./test/Extra/3.5.1.txt:\n",
       "Greedy 1: 3\n",
       "Greedy 2: 3\n",
+      "Greedy 3: 3\n",
       "\n",
       "File: ./test/Extra/3.5.2.txt:\n",
       "Greedy 1: 3\n",
       "Greedy 2: 3\n",
+      "Greedy 3: 3\n",
       "\n",
       "File: ./test/Extra/3.5.3.txt:\n",
       "Greedy 1: 3\n",
       "Greedy 2: 3\n",
+      "Greedy 3: 3\n",
       "\n",
       "File: ./test/normal/3.2.2.txt:\n",
       "Greedy 1: 7\n",
       "Greedy 2: 7\n",
+      "Greedy 3: 7\n",
       "\n",
       "File: ./test/normal/3.2.3.txt:\n",
       "Greedy 1: 10\n",
-      "Greedy 2: 10\n",
+      "Greedy 2: 8\n",
+      "Greedy 3: 8\n",
       "\n",
       "File: ./test/normal/3.2.1.txt:\n",
       "Greedy 1: 10\n",
-      "Greedy 2: 10\n",
+      "Greedy 2: 9\n",
+      "Greedy 3: 9\n",
       "\n",
       "File: ./test/normal/3.3.1.txt:\n",
       "Greedy 1: 7\n",
       "Greedy 2: 7\n",
+      "Greedy 3: 7\n",
       "\n",
       "File: ./test/normal/3.1.3.txt:\n",
       "Greedy 1: 5\n",
-      "Greedy 2: 5\n",
+      "Greedy 2: 7\n",
+      "Greedy 3: 7\n",
       "\n",
       "File: ./test/normal/3.1.2.txt:\n",
       "Greedy 1: 5\n",
       "Greedy 2: 5\n",
+      "Greedy 3: 5\n",
       "\n",
       "File: ./test/normal/3.3.2.txt:\n",
       "Greedy 1: 10\n",
       "Greedy 2: 10\n",
+      "Greedy 3: 10\n",
       "\n",
       "File: ./test/normal/3.1.1.txt:\n",
       "Greedy 1: 10\n",
       "Greedy 2: 10\n",
+      "Greedy 3: 10\n",
       "\n",
       "File: ./test/normal/3.3.3.txt:\n",
       "Greedy 1: 5\n",
       "Greedy 2: 5\n",
+      "Greedy 3: 5\n",
       "\n"
      ]
     }
@@ -284,6 +357,7 @@
     "            # print(f\"Brute Force 1: {max_passenger_brute_force(road, fuel)}\")\n",
     "            print(f\"Greedy 1: {max_passenger_greedy_1(road, fuel)}\")\n",
     "            print(f\"Greedy 2: {max_passenger_greedy_2(road, fuel)}\")\n",
+    "            print(f\"Greedy 3: {max_passenger_greedy_3(road, fuel)}\")\n",
     "\n",
     "        print()"
    ]
