--- a/LAB3/LAB3.ipynb
+++ b/LAB3/LAB3.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,12 +60,12 @@
     "\n",
     "    # Generate all possible combinations of grab and passenger index\n",
     "    grab_permutations = list(itertools.permutations(grab_index, n_of_selectable))\n",
-    "    passenger_permutations = list(itertools.permutations(passenger_index, n_of_selectable))\n",
+    "    passenger_combinations = list(itertools.combinations(passenger_index, n_of_selectable))\n",
     "\n",
     "    # Get Passenger for each grab\n",
     "    possible_solutions = []\n",
     "    for grab in grab_permutations:\n",
-    "        for passenger in passenger_permutations:\n",
+    "        for passenger in passenger_combinations:\n",
     "            solution = list(zip(grab, passenger))\n",
     "\n",
     "            if canReachPassenger(solution, fuel):\n",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -194,29 +194,9 @@
      "output_type": "stream",
      "text": [
       "[(0, 1), (2, 3), (4, 5)]\n",
-      "[(0, 1), (2, 5), (4, 3)]\n",
-      "[(0, 3), (2, 1), (4, 5)]\n",
-      "[(0, 3), (2, 5), (4, 1)]\n",
       "[(0, 1), (4, 3), (2, 5)]\n",
-      "[(0, 1), (4, 5), (2, 3)]\n",
-      "[(0, 3), (4, 1), (2, 5)]\n",
-      "[(0, 3), (4, 5), (2, 1)]\n",
       "[(2, 1), (0, 3), (4, 5)]\n",
-      "[(2, 3), (0, 1), (4, 5)]\n",
-      "[(2, 5), (0, 1), (4, 3)]\n",
-      "[(2, 5), (0, 3), (4, 1)]\n",
-      "[(2, 1), (4, 5), (0, 3)]\n",
-      "[(2, 3), (4, 5), (0, 1)]\n",
-      "[(2, 5), (4, 1), (0, 3)]\n",
-      "[(2, 5), (4, 3), (0, 1)]\n",
       "[(4, 1), (0, 3), (2, 5)]\n",
-      "[(4, 3), (0, 1), (2, 5)]\n",
-      "[(4, 5), (0, 1), (2, 3)]\n",
-      "[(4, 5), (0, 3), (2, 1)]\n",
-      "[(4, 1), (2, 5), (0, 3)]\n",
-      "[(4, 3), (2, 5), (0, 1)]\n",
-      "[(4, 5), (2, 1), (0, 3)]\n",
-      "[(4, 5), (2, 3), (0, 1)]\n",
       "Brute Force 1: 3\n",
       "Greedy 1: 3\n",
       "Greedy 2: 3\n"
