--- a/LAB4/LAB4.ipynb
+++ b/LAB4/LAB4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,11 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "amout = 5\n",
+    "amount = 5\n",
     "coins = [1, 2, 3]\n",
     "\n",
     "Vector = list[int]\n",
@@ -24,43 +24,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "picks = [[] for i in range(amout + 1)]\n",
+    "coins_table = [[] for i in range(amount + 1)]\n",
     "\n",
     "for coin in coins:\n",
-    "    picks[coin].append([coin])"
+    "    coins_table[coin].append([coin])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def is_unique_combination(current_pick: Vector) -> bool:\n",
+    "def is_unique_combination(coins: Vector) -> bool:\n",
     "\n",
-    "    current_amount = sum(current_pick)\n",
-    "    choose_picks = picks[current_amount]\n",
+    "    sum_amount = sum(coins)\n",
+    "    choose_coin = coins_table[sum_amount]\n",
     "\n",
-    "    for pick in choose_picks:\n",
-    "        if Counter(pick) == Counter(current_pick):\n",
+    "    for coin in choose_coin:\n",
+    "        if Counter(coin) == Counter(coins):\n",
     "            return False\n",
     "    return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_change(amount: int, coins: Vector, current_picks: Vector) -> Vector:\n",
     "\n",
     "    if (is_unique_combination(current_picks)):\n",
-    "        picks[sum(current_picks)].append(current_picks)\n",
+    "        coins_table[sum(current_picks)].append(current_picks)\n",
     "\n",
     "    for coin in coins:\n",
     "        if amount >= coin:\n",
@@ -69,12 +69,12 @@
     "\n",
     "            make_change(amount - coin, coins, new_current_picks)\n",
     "\n",
-    "    return picks[amount]"
+    "    return coins_table[amount]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -90,10 +90,10 @@
     }
    ],
    "source": [
-    "sol = make_change(amout, coins, [])\n",
+    "sol = make_change(amount, coins, [])\n",
     "\n",
-    "for i in range(1, len(picks)):\n",
-    "    print(\"amount: \" + str(i) + \" picks: \" + str(picks[i]))"
+    "for i in range(1, len(coins_table)):\n",
+    "    print(\"amount: \" + str(i) + \" picks: \" + str(coins_table[i]))"
    ]
   },
   {
@@ -112,13 +112,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "n_coins = []\n",
     "coins = []\n",
-    "\n",
     "\n",
     "def bottom_up_min_change(amount):\n",
     "\n",
@@ -135,14 +134,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Minimum number of coins to make change for 10 is 4 coins: [1, 3, 3, 3]\n"
+     "ename": "TypeError",
+     "evalue": "'>=' not supported between instances of 'int' and 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 7\u001b[0m\n\u001b[1;32m      3\u001b[0m n_coins[\u001b[39m0\u001b[39m] \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m      5\u001b[0m coins \u001b[39m=\u001b[39m [[] \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(amount \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m)]\n\u001b[0;32m----> 7\u001b[0m solution \u001b[39m=\u001b[39m bottom_up_min_change(amount)\n\u001b[1;32m      8\u001b[0m \u001b[39mprint\u001b[39m(\n\u001b[1;32m      9\u001b[0m     \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mMinimum number of coins to make change for \u001b[39m\u001b[39m{\u001b[39;00mamount\u001b[39m}\u001b[39;00m\u001b[39m is \u001b[39m\u001b[39m{\u001b[39;00msolution[\u001b[39m0\u001b[39m]\u001b[39m}\u001b[39;00m\u001b[39m coins: \u001b[39m\u001b[39m{\u001b[39;00msolution[\u001b[39m1\u001b[39m]\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[7], line 11\u001b[0m, in \u001b[0;36mbottom_up_min_change\u001b[0;34m(amount)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, amount \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m):\n\u001b[1;32m     10\u001b[0m     \u001b[39mfor\u001b[39;00m coin \u001b[39min\u001b[39;00m coins:\n\u001b[0;32m---> 11\u001b[0m         \u001b[39mif\u001b[39;00m i \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m coin:\n\u001b[1;32m     12\u001b[0m             n_coins[i] \u001b[39m=\u001b[39m \u001b[39mmin\u001b[39m(n_coins[i], n_coins[i \u001b[39m-\u001b[39m coin] \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m)\n\u001b[1;32m     13\u001b[0m             coins[i] \u001b[39m=\u001b[39m coins[i \u001b[39m-\u001b[39m coin] \u001b[39m+\u001b[39m [coin]\n",
+      "\u001b[0;31mTypeError\u001b[0m: '>=' not supported between instances of 'int' and 'list'"
      ]
     }
    ],
@@ -167,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
