Revert "🧑‍💻 Change Variable name"
This reverts commit d4078bfe8f110b98d25b8a4cf13ffab2a4ef4e7e.

--- a/LAB4/LAB4.ipynb
+++ b/LAB4/LAB4.ipynb
@@ -116,20 +116,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_coins = []\n",
-    "coins = []\n",
+    "n_change = []\n",
+    "change = []\n",
     "\n",
     "def bottom_up_min_change(amount):\n",
     "\n",
-    "    global n_coins, coins\n",
+    "    global n_change, change\n",
     "\n",
     "    for i in range(1, amount + 1):\n",
     "        for coin in coins:\n",
     "            if i >= coin:\n",
-    "                n_coins[i] = min(n_coins[i], n_coins[i - coin] + 1)\n",
-    "                coins[i] = coins[i - coin] + [coin]\n",
+    "                n_change[i] = min(n_change[i], n_change[i - coin] + 1)\n",
+    "                change[i] = change[i - coin] + [coin]\n",
     "\n",
-    "    return n_coins[amount], coins[amount]"
+    "    return n_change[amount], change[amount]"
    ]
   },
   {
@@ -152,10 +152,10 @@
    ],
    "source": [
     "amount = 10\n",
-    "n_coins = [float(\"inf\") for _ in range(amount + 1)]\n",
-    "n_coins[0] = 0\n",
+    "n_change = [float(\"inf\") for _ in range(amount + 1)]\n",
+    "n_change[0] = 0\n",
     "\n",
-    "coins = [[] for _ in range(amount + 1)]\n",
+    "change = [[] for _ in range(amount + 1)]\n",
     "\n",
     "solution = bottom_up_min_change(amount)\n",
     "print(\n",
@@ -175,25 +175,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_coins = []\n",
-    "coins = []\n",
+    "n_change = []\n",
+    "change = []\n",
     "\n",
     "\n",
     "def top_down_min_change(amount):\n",
     "\n",
-    "    global coins, n_coins\n",
+    "    global change, n_change\n",
     "\n",
-    "    if (n_coins[amount] != float(\"inf\")):\n",
-    "        return n_coins[amount], coins[amount]\n",
+    "    if (n_change[amount] != float(\"inf\")):\n",
+    "        return n_change[amount], change[amount]\n",
     "\n",
     "    for coin in coins:\n",
     "        if amount >= coin:\n",
     "            current_n_change, _ = top_down_min_change(amount - coin)\n",
     "\n",
-    "            n_coins[amount] = min(n_coins[amount], current_n_change + 1)\n",
-    "            coins[amount] = coins[amount - coin] + [coin]\n",
+    "            n_change[amount] = min(n_change[amount], current_n_change + 1)\n",
+    "            change[amount] = change[amount - coin] + [coin]\n",
     "\n",
-    "    return n_coins[amount], coins[amount]"
+    "    return n_change[amount], change[amount]"
    ]
   },
   {
@@ -210,10 +210,10 @@
     }
    ],
    "source": [
-    "n_coins = [float(\"inf\") for _ in range(amount + 1)]\n",
-    "n_coins[0] = 0\n",
+    "n_change = [float(\"inf\") for _ in range(amount + 1)]\n",
+    "n_change[0] = 0\n",
     "\n",
-    "coins = [[] for _ in range(amount + 1)]\n",
+    "change = [[] for _ in range(amount + 1)]\n",
     "\n",
     "solution = top_down_min_change(amount)\n",
     "print(\n",
