--- a/LAB4/LAB4.ipynb
+++ b/LAB4/LAB4.ipynb
@@ -138,15 +138,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'>=' not supported between instances of 'int' and 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 7\u001b[0m\n\u001b[1;32m      3\u001b[0m n_coins[\u001b[39m0\u001b[39m] \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m      5\u001b[0m coins \u001b[39m=\u001b[39m [[] \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(amount \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m)]\n\u001b[0;32m----> 7\u001b[0m solution \u001b[39m=\u001b[39m bottom_up_min_change(amount)\n\u001b[1;32m      8\u001b[0m \u001b[39mprint\u001b[39m(\n\u001b[1;32m      9\u001b[0m     \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mMinimum number of coins to make change for \u001b[39m\u001b[39m{\u001b[39;00mamount\u001b[39m}\u001b[39;00m\u001b[39m is \u001b[39m\u001b[39m{\u001b[39;00msolution[\u001b[39m0\u001b[39m]\u001b[39m}\u001b[39;00m\u001b[39m coins: \u001b[39m\u001b[39m{\u001b[39;00msolution[\u001b[39m1\u001b[39m]\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[7], line 11\u001b[0m, in \u001b[0;36mbottom_up_min_change\u001b[0;34m(amount)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, amount \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m):\n\u001b[1;32m     10\u001b[0m     \u001b[39mfor\u001b[39;00m coin \u001b[39min\u001b[39;00m coins:\n\u001b[0;32m---> 11\u001b[0m         \u001b[39mif\u001b[39;00m i \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m coin:\n\u001b[1;32m     12\u001b[0m             n_coins[i] \u001b[39m=\u001b[39m \u001b[39mmin\u001b[39m(n_coins[i], n_coins[i \u001b[39m-\u001b[39m coin] \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m)\n\u001b[1;32m     13\u001b[0m             coins[i] \u001b[39m=\u001b[39m coins[i \u001b[39m-\u001b[39m coin] \u001b[39m+\u001b[39m [coin]\n",
-      "\u001b[0;31mTypeError\u001b[0m: '>=' not supported between instances of 'int' and 'list'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum number of coins to make change for 10 is 4 coins: [1, 3, 3, 3]\n"
      ]
     }
    ],
@@ -171,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
