--- a/LAB4/LAB4.ipynb
+++ b/LAB4/LAB4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "amount = 5\n",
-    "coins = [1, 2, 3]\n",
+    "amount = 10\n",
+    "coins = [2, 3, 9]\n",
     "\n",
     "Vector = list[int]\n",
     "Matrix = list[Vector]"
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,18 +74,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "amount: 1 picks: [[1]]\n",
-      "amount: 2 picks: [[2], [1, 1]]\n",
-      "amount: 3 picks: [[3], [1, 1, 1], [1, 2]]\n",
-      "amount: 4 picks: [[1, 1, 1, 1], [1, 1, 2], [1, 3], [2, 2]]\n",
-      "amount: 5 picks: [[1, 1, 1, 1, 1], [1, 1, 1, 2], [1, 1, 3], [1, 2, 2], [2, 3]]\n"
+      "amount: 1 picks: []\n",
+      "amount: 2 picks: [[2]]\n",
+      "amount: 3 picks: [[3]]\n",
+      "amount: 4 picks: [[2, 2]]\n",
+      "amount: 5 picks: [[2, 3]]\n",
+      "amount: 6 picks: [[2, 2, 2], [3, 3]]\n",
+      "amount: 7 picks: [[2, 2, 3]]\n",
+      "amount: 8 picks: [[2, 2, 2, 2], [2, 3, 3]]\n",
+      "amount: 9 picks: [[9], [2, 2, 2, 3], [3, 3, 3]]\n",
+      "amount: 10 picks: [[2, 2, 2, 2, 2], [2, 2, 3, 3]]\n"
      ]
     }
    ],
@@ -112,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,36 +130,45 @@
     "\n",
     "    for i in range(1, amount + 1):\n",
     "        for coin in coins:\n",
-    "            if i >= coin:\n",
-    "                n_change[i] = min(n_change[i], n_change[i - coin] + 1)\n",
-    "                change[i] = change[i - coin] + [coin]\n",
+    "            if i == coin:\n",
+    "                n_change[i] = 1\n",
+    "                change[i] = [coin]\n",
+    "            elif i > coin:\n",
+    "                if n_change[i - coin] + 1 < n_change[i]:\n",
+    "                    n_change[i] = n_change[i - coin] + 1\n",
+    "                    change[i] = change[i - coin] + [coin]\n",
     "\n",
     "    return n_change[amount], change[amount]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Minimum number of coins to make change for 10 is 4 coins: [1, 3, 3, 3]\n"
+      "Minimum number of coins to make change for 10 is 4 coins: [3, 3, 2, 2]\n",
+      "Dynamic Programming Table:\n",
+      "n_change: [0, inf, 1, 1, 2, 2, 2, 3, 3, 1, 4]\n",
+      "change: [[], [], [2], [3], [2, 2], [3, 2], [3, 3], [3, 2, 2], [3, 3, 2], [9], [3, 3, 2, 2]]\n"
      ]
     }
    ],
    "source": [
-    "amount = 10\n",
     "n_change = [float(\"inf\") for _ in range(amount + 1)]\n",
     "n_change[0] = 0\n",
     "\n",
     "change = [[] for _ in range(amount + 1)]\n",
     "\n",
     "solution = bottom_up_min_change(amount)\n",
-    "print(\n",
-    "    f\"Minimum number of coins to make change for {amount} is {solution[0]} coins: {solution[1]}\")"
+    "print(f\"Minimum number of coins to make change for {amount} is {solution[0]} coins: {solution[1]}\")\n",
+    "\n",
+    "print(\"Dynamic Programming Table:\")\n",
+    "print(\"n_change: \" + str(n_change))\n",
+    "print(\"change: \" + str(change))"
    ]
   },
   {
@@ -166,41 +180,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
     "n_change = []\n",
     "change = []\n",
     "\n",
-    "\n",
     "def top_down_min_change(amount):\n",
     "\n",
     "    global change, n_change\n",
     "\n",
+    "    # memoization\n",
     "    if (n_change[amount] != float(\"inf\")):\n",
     "        return n_change[amount], change[amount]\n",
     "\n",
-    "    for coin in coins:\n",
-    "        if amount >= coin:\n",
-    "            current_n_change, _ = top_down_min_change(amount - coin)\n",
+    "    # base case\n",
+    "    if (amount in coins):\n",
+    "        n_change[amount] = 1\n",
+    "        change[amount] = [amount]\n",
+    "        return n_change[amount], change[amount]\n",
     "\n",
-    "            n_change[amount] = min(n_change[amount], current_n_change + 1)\n",
-    "            change[amount] = change[amount - coin] + [coin]\n",
+    "    # recursive case\n",
+    "    for coin in coins:\n",
+    "        if amount > coin:\n",
+    "            current_n_change, current_change = top_down_min_change(amount - coin)\n",
+    "\n",
+    "            if current_n_change + 1 < n_change[amount]:\n",
+    "                n_change[amount] = current_n_change + 1\n",
+    "                change[amount] = current_change + [coin]\n",
     "\n",
     "    return n_change[amount], change[amount]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Minimum number of coins to make change for 10 is 4 coins: [1, 3, 3, 3]\n"
+      "Minimum number of coins to make change for 10 is 4 coins: [3, 3, 2, 2]\n",
+      "Dynamic Programming Table:\n",
+      "n_change: [0, inf, 1, 1, 2, 2, 2, 3, 3, inf, 4]\n",
+      "change: [[], [], [2], [3], [2, 2], [3, 2], [3, 3], [3, 2, 2], [3, 3, 2], [], [3, 3, 2, 2]]\n"
      ]
     }
    ],
@@ -212,8 +237,19 @@
     "\n",
     "solution = top_down_min_change(amount)\n",
     "print(\n",
-    "    f\"Minimum number of coins to make change for {amount} is {solution[0]} coins: {solution[1]}\")"
+    "    f\"Minimum number of coins to make change for {amount} is {solution[0]} coins: {solution[1]}\")\n",
+    "\n",
+    "print(\"Dynamic Programming Table:\")\n",
+    "print(\"n_change: \" + str(n_change))\n",
+    "print(\"change: \" + str(change))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
