--- a/LAB4/LAB4.ipynb
+++ b/LAB4/LAB4.ipynb
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,10 +189,13 @@
     "\n",
     "def top_down_min_change(amount):\n",
     "\n",
+    "    # print(f\"Find change for {amount}\")\n",
+    "\n",
     "    global change, n_change\n",
     "\n",
     "    # memoization\n",
     "    if (n_change[amount] != float(\"inf\")):\n",
+    "        # print(\"Memoization\")\n",
     "        return n_change[amount], change[amount]\n",
     "\n",
     "    # base case\n",
@@ -215,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -242,6 +245,72 @@
     "print(\"Dynamic Programming Table:\")\n",
     "print(\"n_change: \" + str(n_change))\n",
     "print(\"change: \" + str(change))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File: ./test/4.2.txt\n",
+      "Minimum number of coins to make change for 48 is 4 coins: [14, 14, 14, 6]\n",
+      "File: ./test/4.13.txt\n",
+      "Minimum number of coins to make change for 522 is 6 coins: [90, 90, 90, 90, 90, 72]\n",
+      "File: ./test/4.12.txt\n",
+      "Minimum number of coins to make change for 312 is 8 coins: [43, 43, 43, 43, 43, 43, 43, 11]\n",
+      "File: ./test/4.3.txt\n",
+      "Minimum number of coins to make change for 28 is 4 coins: [7, 7, 7, 7]\n",
+      "File: ./test/4.1.txt\n",
+      "Minimum number of coins to make change for 12 is 2 coins: [10, 2]\n",
+      "File: ./test/4.10.txt\n",
+      "Minimum number of coins to make change for 49 is inf coins: []\n",
+      "File: ./test/4.11.txt\n",
+      "Minimum number of coins to make change for 149 is 9 coins: [17, 17, 17, 17, 17, 17, 17, 17, 13]\n",
+      "File: ./test/4.4.txt\n",
+      "Minimum number of coins to make change for 25 is 3 coins: [9, 9, 7]\n",
+      "File: ./test/4.5.txt\n",
+      "Minimum number of coins to make change for 31 is inf coins: []\n",
+      "File: ./test/4.7.txt\n",
+      "Minimum number of coins to make change for 30 is 3 coins: [12, 9, 9]\n",
+      "File: ./test/4.6.txt\n",
+      "Minimum number of coins to make change for 22 is 3 coins: [8, 7, 7]\n",
+      "File: ./test/4.14(Extra).txt\n",
+      "Minimum number of coins to make change for 9036 is 2 coins: [4517, 4519]\n",
+      "File: ./test/4.8.txt\n",
+      "Minimum number of coins to make change for 48 is 3 coins: [36, 7, 5]\n",
+      "File: ./test/4.9.txt\n",
+      "Minimum number of coins to make change for 56 is 6 coins: [11, 11, 11, 11, 7, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "path = \"./test\"\n",
+    "files = os.listdir(path)\n",
+    "\n",
+    "sys.setrecursionlimit(100000)\n",
+    "\n",
+    "for file in files:\n",
+    "    file_path = path + \"/\" + file\n",
+    "    with open(file_path, \"r\") as f:\n",
+    "        print(f\"File: {file_path}\")\n",
+    "        amount = int(f.readline())\n",
+    "        coins = [int(coin) for coin in f.readline().split()]\n",
+    "\n",
+    "        n_change = [float(\"inf\") for _ in range(amount + 1)]\n",
+    "        n_change[0] = 0\n",
+    "\n",
+    "        change = [[] for _ in range(amount + 1)]\n",
+    "\n",
+    "        solution = top_down_min_change(amount)\n",
+    "        print(\n",
+    "            f\"Minimum number of coins to make change for {amount} is {solution[0]} coins: {solution[1]}\")"
    ]
   },
   {
