Add: Top down approach

--- a/LAB4/LAB4_1.ipynb
+++ b/LAB4/LAB4_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,12 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_unique_coins(coins: Vector) -> bool:\n",
-    "    \n",
+    "\n",
     "    amount = sum(coins)\n",
     "    check_coins = coins_table[amount]\n",
     "\n",
@@ -40,12 +40,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bottom Up Approach\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_change(amount: int, coins: Vector):\n",
+    "def bottom_up_make_change(amount: int, coins: Vector):\n",
     "\n",
     "    if amount == 0:\n",
     "        return None\n",
@@ -66,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +95,77 @@
     "for i in range(1, amount + 1):\n",
     "    coins_table[i] = []\n",
     "\n",
-    "make_change(amount, coins)\n",
+    "bottom_up_make_change(amount, coins)\n",
+    "\n",
+    "for i in range(1, amount + 1):\n",
+    "    print(f\"{i}: {coins_table[i]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def top_down_make_change(amount: int, coins: Vector):\n",
+    "\n",
+    "    print(\"Finding combinations for\", amount)\n",
+    "\n",
+    "    if amount == 0:\n",
+    "        return []\n",
+    "\n",
+    "    if coins_table.get(amount) != []:\n",
+    "        return coins_table[amount]\n",
+    "    \n",
+    "    if amount in coins:\n",
+    "        coins_table[amount].append([amount])\n",
+    "\n",
+    "    for coin in coins:\n",
+    "        if coin < amount:\n",
+    "            combinations = top_down_make_change(amount - coin, coins)\n",
+    "\n",
+    "            for combination in combinations:\n",
+    "                if is_unique_coins(combination + [coin]):\n",
+    "                    coins_table[amount].append(combination + [coin])\n",
+    "\n",
+    "    return coins_table[amount]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finding combinations for 5\n",
+      "Finding combinations for 4\n",
+      "Finding combinations for 3\n",
+      "Finding combinations for 2\n",
+      "Finding combinations for 1\n",
+      "Finding combinations for 1\n",
+      "Finding combinations for 2\n",
+      "Finding combinations for 1\n",
+      "Finding combinations for 3\n",
+      "Finding combinations for 2\n",
+      "1: [[1]]\n",
+      "2: [[2], [1, 1]]\n",
+      "3: [[3], [2, 1], [1, 1, 1]]\n",
+      "4: [[3, 1], [2, 1, 1], [1, 1, 1, 1], [2, 2]]\n",
+      "5: [[3, 1, 1], [2, 1, 1, 1], [1, 1, 1, 1, 1], [2, 2, 1], [3, 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "amount = 5\n",
+    "coins = [1, 2, 3]\n",
+    "\n",
+    "for i in range(1, amount + 1):\n",
+    "    coins_table[i] = []\n",
+    "\n",
+    "top_down_make_change(amount, coins)\n",
     "\n",
     "for i in range(1, amount + 1):\n",
     "    print(f\"{i}: {coins_table[i]}\")"
